@@ -23,6 +23,7 @@ CAY-2883 License and notice templates are not processed by the Gradle build
 CAY-2885 Modeler: DbImport fails to load DB schema view
 CAY-2896 Inserting two identical objects into two datamaps stores both objects in the last used datamap
 CAY-2898 Crypto: NPE in a ColumnQuery
+CAY-2900 Meaningful generated PKs could lead to the ClassCastException
 
 ----------------------------------
 Release: 4.2.2
